--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "mocha": "^2.2.5"
   },
   "dependencies": {
-    "bitcore-lib": "dallar-project/bitcore-lib",
+    "bitcore-lib": "dallar-project/bitcore-lib#copay",
     "unorm": "^1.3.3"
   }
 }
